# english-center

./: .gitignore  AGENT.md  Cách cài đặt dự án.txt  note.txt  note_lan_2.txt  skills-lock.json
english-center-backend/: .env.example  alembic.ini  backup.sql  backup_1.sql  backup_data.sql  db.sql  docker-compose.yml  dump-english_center-202607101203.sql  pyproject.toml  requirements.txt  test.py
english-center-backend/alembic/: env.py
english-center-backend/alembic/versions/: 20260520_0001_create_users_table.py  20260521_0002_create_course_content_tables.py  20260521_0003_create_commerce_payment_tables.py  20260521_0004_create_classroom_attendance_tables.py  20260521_0005_create_assignment_tables.py  20260529_0006_create_agent_states_table.py  20260529_0007_refactor_course_media_and_category_model.py  20260529_0008_refactor_lesson_media_relations.py  20260529_0009_refactor_assignment_types_and_questions.py  20260529_0010_add_class_id_to_commerce_items.py  20260605_0011_allow_template_lesson_assignments.py  20260606_0012_create_class_sessions_media_table.py  20260610_0013_add_room_id_to_classes.py  20260614_0014_create_chat_tables.py  20260621_0015_refactor_class_schedules.py  20260621_0016_add_chat_session_messages.py  20260621_0017_create_guest_enrollments.py  20260630_0018_change_lessons_content_to_jsonb.py  20260710_0019_add_folder_to_media.py  20260711_0020_big_schema_refactor.py  20260712_0021_chat_and_payment_webhooks_refactor.py  (+4 more)
english-center-backend/app/: main.py
english-center-backend/scripts/: create_superuser.py  seed.py
english-center-client/: .env  (+5 more)
(+573 files in other folders)
