[project]
name = "english-center-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "ddgs>=9.14.4",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "minio>=7.2.20",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
    "websockets>=10.4,<15",
]
[tool.fastapi]
entrypoint = "app.main:app"
